fixed spacing for realzies

--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@
     font-family: magra;
     src: url(Fonts/Magra.ttf);
 }
+
 body {
-    /*background: linear-gradient(to right, blue, green, pink, purple);*/
     background-color:#32CD32;
     font-family:stark;
 }
@@ -16,61 +16,74 @@ a {
     color:inherit;
 }
 #header {
-    margin-top:-1em;
+    margin-top:-3.8em;
     margin-left:-.55em;
-    margin-right:0em;
-    height: 3.3em;
-    width: 90.1em;
+    height:48px;
+    width:100.09%;
     position:absolute;
-    overflow:hidden;
-    z-index: 100;
     background-color:black;
+}
+#subHeader {
+    width:63em;
+    height:48px;
+    position:relative;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: black;
+    overflow:hidden;
 }
 #logo {
-    margin-top:.05em;
-    width:67%;
+    margin-top:.03em;
+    width:70%;
     cursor:pointer;
-}
-#logo:hover {
-    opacity:.9;
 }
 .headerLeft {
-    margin-top:.3em;
+    margin-top:0em;
     float: left;
-    width:20em;
-    margin-left:14.316em;
+    width:300px;
+    height:48px;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+    background-color:black;
+    position:relative;
+    font-family:art;
+    cursor:pointer;
+    font-size:36px;
+    z-index:1;
 }
 .headerRight {
-    margin-top:.3em;
+    margin-top:0em;
+    width:auto;
+    height:3em;
     float: left;
-    width:36em;
-    height:4em;
-    margin-left:5em;
+    margin-left:2%;
+    background-color:black;
 }
 .clicky {
-    background-color:black;
-    color:white;
-    border:orange;
-    font-family: stark;
-    cursor:pointer;
-    margin-left: auto;
-    margin-right: 4em;
     text-align:center;
-    margin-top:.4em;
-    font-size:1.4em;
-    border-radius:.5em;
+    margin-top:.3em;
+    font-size:25px;
+    background-color:black;
+    border:none;
+    color:white;
+    font-family:magra;
+    cursor:pointer;
+    margin-left:90px;
+    margin-right:20px;
 }
 .clicky:hover {
-    opacity:.6;
+    opacity:.9;
 }
-#main {
+#bubble {
     background-color:white;
     height:auto;
     width:62em;
-    margin-top:2.3em;
-    position:absolute;
-    margin-left:13.775em;
-    margin-bottom:1em;
+    margin-top:3.75em;
+    position:static;
+    margin-left:auto;
+    margin-right:auto;
+    bottom:1em;
 }
 #gallery{
     margin-top:.75em;
@@ -126,4 +139,7 @@ iframe{
 }
 #copyright {
     margin-bottom:.5em;
+}
+#bottomSpace{
+    height:.1em;
 }
